# Chat-System

./: CMakeLists.txt  README.cpp  README.md  clienttt.cpp  clienttt.h  gui_main.cpp  main.cpp  server.cpp  server.h
finalClientGui/: CMakeLists.txt  clienttt.h  gui_main.cpp
finally_socket_server/: CMakeLists.txt  gui_main.cpp  gui_main.h  main.cpp  server.cpp  server.h
share_memory/: CMakeLists.txt  main_gui.cpp  mainuser1.cpp  mainuser2.cpp  shared.cpp  shared.hpp  user1  user2
